[project]
name = "ComfyUI-Advanced-Photo-Grain"
description = "Adds realistic film grain, vignette and RGB aberration to photos"
version = "1.0.0"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI-Advanced-Photo-Grain"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Advanced Photo Grain"
Icon = ""
